Stylesheet updated, submit button fixed and alignments adjusted

--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
+#nav {
+    display: flex;
+    flex-direction: row;
+    margin: auto;    
+    width: fit-content;
+    border-style: groove;
+    border-width: 5px;
+    font-family: 'Patua One';
+    font-size: 15px;
+}
+
+#main {
+    text-align: center;
+    margin: auto;
+    background-color: khaki;
+    max-width: 600px;
+    padding: 25px;
+}
+
 #title {
     font-family: 'Monoton';
 }
@@ -8,5 +27,15 @@
 
 #survey-form {
     font-family: 'Patua One';
-    
+    max-width: 500px;    
+    margin: auto;
+}
+
+#name, #email {
+    width: 300px;
+}
+
+#comments {
+    width: 350px;
+    height: 150px;
 }
